@@ -1,3 +1,14 @@
+2011-09-22  Anders Carlsson  <andersca@apple.com>
+
+        We should add support for OVERRIDE and FINAL annotations
+        https://bugs.webkit.org/show_bug.cgi?id=68654
+
+        Reviewed by David Hyatt.
+
+        Add OVERRIDE and FINAL macros for compilers that support them.
+
+        * wtf/Compiler.h:
+
 2011-09-22  Filip Pizlo  <fpizlo@apple.com>
 
         GetScopedVar should have value profiling
